--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-cache-chain",
-  "version": "1.0.0",
-  "description": "",
+  "name": "test-cache-examples",
+  "version": "1.0.1",
+  "description": "Small examples for cache-chain",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cache-chain": "0.0.1",
-    "cache-chain-memory": "0.0.1",
-    "cache-chain-redis": "0.0.1",
+    "cache-chain": "0.0.2",
+    "cache-chain-memory": "0.0.2",
+    "cache-chain-redis": "0.0.2",
     "redis": "^2.4.2"
   }
 }
